--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,19 @@
 spring:
+
+  profiles:
+    active: local
+
   datasource:
-    url: jdbc:h2:coupon:test
-    username: doungyun
-    password: daangn1118
     driver-class-name: org.h2.Driver
+    url: jdbc:h2:~/test
+    username: daangn
+    password: daangn1118
+
+  h2:
+    console:
+      enabled: true
+      path: /h2
+
   jpa:
     hibernate:
       ddl-auto: create
