--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,8 @@ spring:
 
   datasource:
     driver-class-name: org.h2.Driver
-    url: jdbc:h2:~/test
+    url: jdbc:h2:~/test;AUTO_SERVER=true
+
     username: daangn
     password: daangn1118
 
@@ -17,3 +18,8 @@ spring:
   jpa:
     hibernate:
       ddl-auto: create
+
+  redis:
+    host: localhost
+    port: 6379
+    password: daangn1118
