--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
 
   datasource:
     driver-class-name: org.h2.Driver
-    url: jdbc:h2:~/test;AUTO_SERVER=true
+    url: jdbc:h2:~/test
 
     username: daangn
     password: daangn1118
